--- a/main.html
+++ b/main.html
@@ -10,7 +10,31 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<div class="container">
+		<div class="container1">
+			<h1>Shaw's News</h1>
+		</div>
+		<div class="container2">
+		<div class="div1">
+			<h2>Latest News Articles</h2>
+			<ul>
+				<li>Article 1</li>
+				<li>Article 2</li>
+				<li>Article 3</li>
+			</ul>
+		</div>
+		<div class="div2">
+			<h2>Main Article</h2>
+			<p>lorem epsum dolor</p>
+		</div>
+		<div class="div3">
+			<h2>Pictorial News</h2>
+			<div class="img1"><img src="https://images.unsplash.com/photo-1659376417390-94ae08441e44?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="haribol" ></div>
+			<div class="img1"><img src="https://images.unsplash.com/photo-1659376417390-94ae08441e44?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="haribol" ></div>
+			<div class="img1"><img src="https://images.unsplash.com/photo-1659376417390-94ae08441e44?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="haribol" ></div>
+       </div>
+   </div>
+</div>
 </body>
 
 </html>
